syntax = "proto3";

import "google/protobuf/timestamp.proto";

package api;

option go_package = "collector/pkg/api";

service SensorService {
  rpc StreamSensorData (stream SensorData) returns (Empty) {}
}

message SensorData {
  int64 sensor_id = 1;
  int64 type = 2;
  float value = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message Empty {}
